src/k8s/secret-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: learnify-gateway
spec:
  to:
    kind: Service
    name: gateway-service
  port:
    targetPort: 8080
  tls:
    termination: edge
